--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13-beta-2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
@@ -39,7 +39,7 @@ task deleteOldJar(type: Delete) {
 
 task exportJar(type: Copy) {
     from('build/intermediates/packaged-classes/release/')
-    into('libs/')
+    into('release/')
     include('classes.jar')
     rename ('classes.jar', 'tools.jar')
 }
